--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,9 @@
 </div>
 
 {{ if .Site.DisqusShortname -}}
+{{ if eq .Type "post" }}
 <h2>Comments</h2>
 {{ template "_internal/disqus.html" . }}
+{{- end }}
 {{- end }}
 {{- end }}
