add workflow badge

--- a/layouts/partials/head_fonts.html
+++ b/layouts/partials/head_fonts.html
@@ -1,2 +1,6 @@
+<link type="text/css" rel="stylesheet" href="/css/print.css" media="print">
+<link type="text/css" rel="stylesheet" href="/css/poole.css">
+<link type="text/css" rel="stylesheet" href="/css/syntax.css">
+<link type="text/css" rel="stylesheet" href="/css/hyde.css">
 <link href="/css/all.css" rel="stylesheet"> 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
