--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -18,7 +18,8 @@
         {{ with .Site.Params.linkedin}}<a href="{{.}}"><i class="fab fa-linkedin"></i></a>&nbsp;&nbsp;{{end}}
         {{ with .Site.Params.facebook }}<a href="{{.}}"><i class="fab fa-facebook-square"></i></a>&nbsp;&nbsp;{{end}}
         {{ with .Site.Params.github }} <a href="{{.}}"><i class="fab fa-github-square"></i></a>&nbsp;&nbsp;{{end}}
-        {{ with .Site.Params.email }} <a href="{{.}}"><i class="fas fa-at"></i></a>&nbsp;&nbsp;{{end}} 
+        {{ with .Site.Params.email }} <a href="{{.}}"><i class="fas fa-at"></i></a>&nbsp;&nbsp;{{end}}
+        <a href="/index.xml"><i class="fa fa-rss"></i></a>
       </nav>
       
       <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}}</p>
