--- a/layouts/partials/hook_head_end.html
+++ b/layouts/partials/hook_head_end.html
@@ -1,1 +1,11 @@
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/a5706084c4ffefe65016a5bf3/03ba8e66b7e860a61bd18276f.js");</script>
+<!-- <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+<script>
+    function showMailingPopUp() {
+        require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"a5706084c4ffefe65016a5bf3","lid":"856a29415d"}) })
+    }
+    document.addEventListener('readystatechange', event => { 
+        if (event.target.readyState === "complete") {
+                document.getElementById("open-popup").onclick = function() {showMailingPopUp()};
+        }
+    })
+</script> -->
